--- a/deployment.yml
+++ b/deployment.yml
@@ -5,6 +5,9 @@ metadata:
   namespace: nginx-demo
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: nginx-demo
   template:
     metadata:
       labels:
